test/compilable/nodiscard_funcptr.d
@nodiscard extern int func();
auto fp = &func;

void ignore()
{
    fp();
}
